 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "foreign-equity-transactions-processing"
 version = "0.1.0"
 description = "Compile raw foreign equity transactions per Indian financial year for tax data."
 readme = "README.md"
 requires-python = ">=3.6"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "xlsxwriter",
]
